tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/array/missing-separator.stderr
TOML parse error at line 1, column 13
  |
1 | wrong = [ 1 2 3 ]
  |             ^
invalid array
expected `]`
